# secretClient

./: CMakeLists.txt  idk.cpp  idk.h
v1/CLIENT/: main.cpp
v1/SERVER/: main.cpp  main2.cpp
v2/CLIENT/: main.cpp
v2/SERVER/: main.cpp
